--- a/Util/Util/Util.vcxproj.filters
+++ b/Util/Util/Util.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="os.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="process.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="system.c">
@@ -33,6 +36,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="os.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="process.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
