--- a/Util/Util/Util.vcxproj.filters
+++ b/Util/Util/Util.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="process.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="util_config.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="system.c">
