--- a/Util/UtilTest/UtilTest.vcxproj.filters
+++ b/Util/UtilTest/UtilTest.vcxproj.filters
@@ -24,4 +24,7 @@
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt" />
+  </ItemGroup>
 </Project>
